--- a/styles/styles.css
+++ b/styles/styles.css
@@ -131,3 +131,58 @@ font-weight: 800;
     padding: 60px;
     gap: 20px;
 }
+/* deals section */
+.deals-heading1{
+    font-size: 50px;
+    text-align: center;
+}
+.deals-heading2{
+    font-size: 25px;
+    text-align: center;
+    color: gray;
+}
+.deals{
+    
+   text-align: center;
+   background-image: url('../Flower Asset/Rectangle\ 9.png');
+   border-radius: 8px;
+   width: 1440px;
+   height: 449px;
+   
+}
+input{
+    padding: 20px 100px;
+}
+.subscribe{
+    background: red;
+    color: white;
+    padding: 20px 20px;
+    font-size: 20px;
+    border-radius: 8px;
+}
+/* footer */
+.footer{
+    background-color: black;
+    width: 1922px;
+    height: 449px;
+    color: white;
+    text-align: center;
+    width: 100%;
+    margin: auto;
+    padding: 80px;
+    margin-top: 40px;
+}
+.span-flower{
+    color: red;
+}
+.footer-head{
+    font-size: 50px;
+}
+.footer-paragraph{
+    font-size: 20px;
+    color: white;
+}
+.footer-heading{
+    font-size: 15px;
+    color:gray ;
+}
