--- a/styles/styles.css
+++ b/styles/styles.css
@@ -158,7 +158,7 @@ input{
     color: white;
     padding: 20px 20px;
     font-size: 20px;
-    border-radius: 8px;
+    /* border-radius: 8px; */
 }
 /* footer */
 .footer{
